webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live-redis
spec:
  selector:
    app: webook-live-redis
  ports:
    - protocol: TCP
      port: 11479
      targetPort: 6379
#用户用到redis的东西，30003->6379
#webook用到redis的东西 11479->6379 不同的身份访问不同的接口
      nodePort: 30003
  type: NodePort
