webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-live-ingress
spec:
#表示我要使用nginx
  ingressClassName: nginx
  rules:
#host是live.webook.com的时候，命中我这条
    - host: live.webook.com
    - http:
        paths:
#请求路径的前缀是/的时候，将流量转发过去后面的webook-live服务上，端口是81
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webook-live
                port:
                  number: 81
